@@ -41,13 +41,11 @@ Get stock locations::
     >>> storage_loc, = Location.find([('code', '=', 'STO')])
     >>> customer_loc, = Location.find([('code', '=', 'CUS')])
 
-Create product::
+Create products::
 
     >>> ProductUom = Model.get('product.uom')
     >>> ProductTemplate = Model.get('product.template')
-    >>> Product = Model.get('product.product')
     >>> unit, = ProductUom.find([('name', '=', 'Unit')])
-    >>> product = Product()
     >>> template = ProductTemplate()
     >>> template.name = 'Product'
     >>> template.default_uom = unit
@@ -56,8 +54,18 @@ Create product::
     >>> template.cost_price = Decimal('80')
     >>> template.cost_price_method = 'average'
     >>> template.save()
-    >>> product.template = template
-    >>> product.save()
+    >>> product, = template.products
+
+    >>> kg, = ProductUom.find([('name', '=', 'Kilogram')])
+    >>> template2 = ProductTemplate()
+    >>> template2.name = 'Product'
+    >>> template2.default_uom = kg
+    >>> template2.type = 'goods'
+    >>> template2.list_price = Decimal('140')
+    >>> template2.cost_price = Decimal('60')
+    >>> template2.cost_price_method = 'average'
+    >>> template2.save()
+    >>> product2, = template2.products
 
 Fill storage::
 
@@ -73,7 +81,21 @@ Fill storage::
     >>> incoming_move.company = company
     >>> incoming_move.unit_price = Decimal('100')
     >>> incoming_move.currency = company.currency
-    >>> incoming_move.click('do')
+    >>> incoming_moves = [incoming_move]
+
+    >>> incoming_move = StockMove()
+    >>> incoming_move.product = product2
+    >>> incoming_move.uom = kg
+    >>> incoming_move.quantity = 2.5
+    >>> incoming_move.from_location = supplier_loc
+    >>> incoming_move.to_location = storage_loc
+    >>> incoming_move.planned_date = today
+    >>> incoming_move.effective_date = today
+    >>> incoming_move.company = company
+    >>> incoming_move.unit_price = Decimal('70')
+    >>> incoming_move.currency = company.currency
+    >>> incoming_moves.append(incoming_move)
+    >>> StockMove.click(incoming_moves, 'do')
 
 Create an inventory::
 
@@ -82,24 +104,78 @@ Create an inventory::
     >>> inventory.location = storage_loc
     >>> inventory.save()
     >>> inventory.click('complete_lines')
-    >>> line, = inventory.lines
-    >>> line.expected_quantity == 1
-    True
-    >>> line.quantity = 2
+    >>> line_by_product = {l.product.id: l for l in inventory.lines}
+    >>> line_p1 = line_by_product[product.id]
+    >>> line_p1.expected_quantity
+    1.0
+    >>> line_p1.quantity = 3
+    >>> line_p2 = line_by_product[product2.id]
+    >>> line_p2.expected_quantity
+    2.5
+    >>> line_p2.quantity
+    2.5
     >>> inventory.save()
+
+Fill storage with more quantities::
+
+    >>> incoming_move = StockMove()
+    >>> incoming_move.product = product
+    >>> incoming_move.uom = unit
+    >>> incoming_move.quantity = 1
+    >>> incoming_move.from_location = supplier_loc
+    >>> incoming_move.to_location = storage_loc
+    >>> incoming_move.planned_date = today
+    >>> incoming_move.effective_date = today
+    >>> incoming_move.company = company
+    >>> incoming_move.unit_price = Decimal('100')
+    >>> incoming_move.currency = company.currency
+    >>> incoming_moves = [incoming_move]
+
+    >>> incoming_move = StockMove()
+    >>> incoming_move.product = product2
+    >>> incoming_move.uom = kg
+    >>> incoming_move.quantity = 1.3
+    >>> incoming_move.from_location = supplier_loc
+    >>> incoming_move.to_location = storage_loc
+    >>> incoming_move.planned_date = today
+    >>> incoming_move.effective_date = today
+    >>> incoming_move.company = company
+    >>> incoming_move.unit_price = Decimal('70')
+    >>> incoming_move.currency = company.currency
+    >>> incoming_moves.append(incoming_move)
+    >>> StockMove.click(incoming_moves, 'do')
+
+Update the inventory::
+
+    >>> inventory.click('complete_lines')
+    >>> line_p1.reload()
+    >>> line_p1.expected_quantity
+    2.0
+    >>> line_p1.quantity
+    3.0
+    >>> line_p2.reload()
+    >>> line_p2.expected_quantity
+    3.8
+    >>> line_p2.quantity
+    3.8
+
+Confirm the inventory::
+
     >>> inventory.click('confirm')
-    >>> line.reload()
-    >>> move, = line.moves
-    >>> move.quantity == 1
-    True
+    >>> line_p1.reload()
+    >>> move, = line_p1.moves
+    >>> move.quantity
+    1.0
     >>> move.from_location == inventory.lost_found
     True
     >>> move.to_location == inventory.location
     True
+    >>> line_p2.reload()
+    >>> len(line_p2.moves)
+    0
 
 Empty storage::
 
-    >>> StockMove = Model.get('stock.move')
     >>> outgoing_move = StockMove()
     >>> outgoing_move.product = product
     >>> outgoing_move.uom = unit
@@ -111,7 +187,21 @@ Empty storage::
     >>> outgoing_move.company = company
     >>> outgoing_move.unit_price = Decimal('100')
     >>> outgoing_move.currency = company.currency
-    >>> outgoing_move.click('do')
+    >>> outgoing_moves = [outgoing_move]
+
+    >>> outgoing_move = StockMove()
+    >>> outgoing_move.product = product2
+    >>> outgoing_move.uom = kg
+    >>> outgoing_move.quantity = 3.8
+    >>> outgoing_move.from_location = storage_loc
+    >>> outgoing_move.to_location = customer_loc
+    >>> outgoing_move.planned_date = today
+    >>> outgoing_move.effective_date = today
+    >>> outgoing_move.company = company
+    >>> outgoing_move.unit_price = Decimal('140')
+    >>> outgoing_move.currency = company.currency
+    >>> outgoing_moves.append(outgoing_move)
+    >>> StockMove.click(outgoing_moves, 'do')
 
 Create an inventory that should be empty after completion::
 
